# Autonomous-Vehicle-Trajectory-Control-Using-Non-Linear-MPC_in_C-

./: README.md  READ_ME_MPC_ABDALLA
MPC_RESULTS/MANEUVERB_MPC_SOLVER_LANE_CHANGE_VARYING_VELOCITY/: cost_lane_test
MPC_RESULTS/MANEUVERC_MPC_SOLVER_TRAJECTORY_CONTROL/: Trajectory_acc  Xcoordinate_real_vs_trajectory  Y-coordinate_real-vs-ref_trajectory  trajectory_const_speed
MPC_RESULTS/MANEUVER_A_MPC_SOLVER_CHANGING_LANES_CONST_VEL/: matpoltlip_script_constant_lanes
MPC_RESULTS/MANEUVER_D_MPC_SOLVER_TRAJECTORY_VEL_CONTROL/: matplotlip_script_trajectory_speed
examples/: CMakeLists.txt  MPC_CHANGING_LANES_VARYING_VELOCITY.cpp  MPC_SOLVER_LANE_CHANGE_CONSTANT_VELOCITY.cpp  MPC_TRAJECTORY.cpp  MPC_solver_trajectory_const_vel.cpp
include/mpc/: LMPC.hpp  Utils.hpp
old_repo/: Kbicyclemodel.cpp  Kbicyclemodel.hpp  MPC_solver.cpp  MPC_solver.hpp
